scraped the wikipedia page

--- a/Brian's Week 3 hw.ipynb
+++ b/Brian's Week 3 hw.ipynb
@@ -29,6 +29,88 @@
                 }
             }, 
             "metadata": {}
+        }, 
+        {
+            "execution_count": 6, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "output_type": "stream", 
+                    "name": "stdout", 
+                    "text": "1 Postcode\n2 Borough\n3 Neighbourhood\n\n"
+                }
+            ], 
+            "source": "#scrape table on wikipedia page\nimport requests\nimport lxml.html as lh\nimport pandas as pd\n\nurl='https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\npage = requests.get(url)\ndoc = lh.fromstring(page.content)\ntr_elements = doc.xpath('//tr')\n[len(T) for T in tr_elements[:12]]\n\ntr_elements = doc.xpath('//tr')\n#Create empty list\ncol=[]\ni=0\n#For each row, store each first element (header) and an empty list\nfor t in tr_elements[0]:\n    i+=1\n    name=t.text_content()\n    print (i,name)\n    col.append((name,[]))"
+        }, 
+        {
+            "execution_count": 17, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "execution_count": 17, 
+                    "metadata": {}, 
+                    "data": {
+                        "text/plain": "294"
+                    }, 
+                    "output_type": "execute_result"
+                }
+            ], 
+            "source": "len(tr_elements)"
+        }, 
+        {
+            "execution_count": 23, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "output_type": "stream", 
+                    "name": "stdout", 
+                    "text": "parsing start\nparsing 1\nparsing 2\nparsing 3\nparsing 4\nparsing 5\nparsing 6\nparsing 7\nparsing 8\nparsing 9\nparsing 10\nparsing 11\nparsing 12\nparsing 13\nparsing 14\nparsing 15\nparsing 16\nparsing 17\nparsing 18\nparsing 19\nparsing 20\nparsing 21\nparsing 22\nparsing 23\nparsing 24\nparsing 25\nparsing 26\nparsing 27\nparsing 28\nparsing 29\nparsing 30\nparsing 31\nparsing 32\nparsing 33\nparsing 34\nparsing 35\nparsing 36\nparsing 37\nparsing 38\nparsing 39\nparsing 40\nparsing 41\nparsing 42\nparsing 43\nparsing 44\nparsing 45\nparsing 46\nparsing 47\nparsing 48\nparsing 49\nparsing 50\nparsing 51\nparsing 52\nparsing 53\nparsing 54\nparsing 55\nparsing 56\nparsing 57\nparsing 58\nparsing 59\nparsing 60\nparsing 61\nparsing 62\nparsing 63\nparsing 64\nparsing 65\nparsing 66\nparsing 67\nparsing 68\nparsing 69\nparsing 70\nparsing 71\nparsing 72\nparsing 73\nparsing 74\nparsing 75\nparsing 76\nparsing 77\nparsing 78\nparsing 79\nparsing 80\nparsing 81\nparsing 82\nparsing 83\nparsing 84\nparsing 85\nparsing 86\nparsing 87\nparsing 88\nparsing 89\nparsing 90\nparsing 91\nparsing 92\nparsing 93\nparsing 94\nparsing 95\nparsing 96\nparsing 97\nparsing 98\nparsing 99\nparsing 100\nparsing 101\nparsing 102\nparsing 103\nparsing 104\nparsing 105\nparsing 106\nparsing 107\nparsing 108\nparsing 109\nparsing 110\nparsing 111\nparsing 112\nparsing 113\nparsing 114\nparsing 115\nparsing 116\nparsing 117\nparsing 118\nparsing 119\nparsing 120\nparsing 121\nparsing 122\nparsing 123\nparsing 124\nparsing 125\nparsing 126\nparsing 127\nparsing 128\nparsing 129\nparsing 130\nparsing 131\nparsing 132\nparsing 133\nparsing 134\nparsing 135\nparsing 136\nparsing 137\nparsing 138\nparsing 139\nparsing 140\nparsing 141\nparsing 142\nparsing 143\nparsing 144\nparsing 145\nparsing 146\nparsing 147\nparsing 148\nparsing 149\nparsing 150\nparsing 151\nparsing 152\nparsing 153\nparsing 154\nparsing 155\nparsing 156\nparsing 157\nparsing 158\nparsing 159\nparsing 160\nparsing 161\nparsing 162\nparsing 163\nparsing 164\nparsing 165\nparsing 166\nparsing 167\nparsing 168\nparsing 169\nparsing 170\nparsing 171\nparsing 172\nparsing 173\nparsing 174\nparsing 175\nparsing 176\nparsing 177\nparsing 178\nparsing 179\nparsing 180\nparsing 181\nparsing 182\nparsing 183\nparsing 184\nparsing 185\nparsing 186\nparsing 187\nparsing 188\nparsing 189\nparsing 190\nparsing 191\nparsing 192\nparsing 193\nparsing 194\nparsing 195\nparsing 196\nparsing 197\nparsing 198\nparsing 199\nparsing 200\nparsing 201\nparsing 202\nparsing 203\nparsing 204\nparsing 205\nparsing 206\nparsing 207\nparsing 208\nparsing 209\nparsing 210\nparsing 211\nparsing 212\nparsing 213\nparsing 214\nparsing 215\nparsing 216\nparsing 217\nparsing 218\nparsing 219\nparsing 220\nparsing 221\nparsing 222\nparsing 223\nparsing 224\nparsing 225\nparsing 226\nparsing 227\nparsing 228\nparsing 229\nparsing 230\nparsing 231\nparsing 232\nparsing 233\nparsing 234\nparsing 235\nparsing 236\nparsing 237\nparsing 238\nparsing 239\nparsing 240\nparsing 241\nparsing 242\nparsing 243\nparsing 244\nparsing 245\nparsing 246\nparsing 247\nparsing 248\nparsing 249\nparsing 250\nparsing 251\nparsing 252\nparsing 253\nparsing 254\nparsing 255\nparsing 256\nparsing 257\nparsing 258\nparsing 259\nparsing 260\nparsing 261\nparsing 262\nparsing 263\nparsing 264\nparsing 265\nparsing 266\nparsing 267\nparsing 268\nparsing 269\nparsing 270\nparsing 271\nparsing 272\nparsing 273\nparsing 274\nparsing 275\nparsing 276\nparsing 277\nparsing 278\nparsing 279\nparsing 280\nparsing 281\nparsing 282\nparsing 283\nparsing 284\nparsing 285\nparsing 286\nparsing 287\nparsing 288\nparsing 289\n"
+                }
+            ], 
+            "source": "print('parsing start')\n#Since out first row is the header, data is stored on the second row onwards\nfor j in range(1,len(tr_elements)):\n    print('parsing', j)\n    #T is our j'th row\n    T=tr_elements[j]\n    \n    #If row is not of size 10, the //tr data is not from our table \n    if len(T)!=3:\n        break\n    \n    #i is the index of our column\n    i=0\n    \n    #Iterate through each element of the row\n    for t in T.iterchildren():\n        data=t.text_content() \n        data\n        #Check if row is empty\n        if i>0:\n        #Convert any numerical value to integers\n            try:\n                data=int(data)\n            except:\n                pass\n        #Append the data to the empty list of the i'th column\n        col[i][1].append(data)\n        #Increment i for the next column\n        i+=1"
+        }, 
+        {
+            "execution_count": 24, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "execution_count": 24, 
+                    "metadata": {}, 
+                    "data": {
+                        "text/plain": "[288, 288, 288]"
+                    }, 
+                    "output_type": "execute_result"
+                }
+            ], 
+            "source": "[len(C) for (title,C) in col]"
+        }, 
+        {
+            "execution_count": 25, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [], 
+            "source": "Dict={title:column for (title,column) in col}\ndf=pd.DataFrame(Dict)\n"
+        }, 
+        {
+            "execution_count": 26, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "execution_count": 26, 
+                    "metadata": {}, 
+                    "data": {
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Borough</th>\n      <th>Neighbourhood</th>\n      <th>Postcode</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Not assigned</td>\n      <td>Not assigned\\n</td>\n      <td>M1A</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Not assigned</td>\n      <td>Not assigned\\n</td>\n      <td>M2A</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>North York</td>\n      <td>Parkwoods\\n</td>\n      <td>M3A</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>North York</td>\n      <td>Victoria Village\\n</td>\n      <td>M4A</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Downtown Toronto</td>\n      <td>Harbourfront\\n</td>\n      <td>M5A</td>\n    </tr>\n  </tbody>\n</table>\n</div>", 
+                        "text/plain": "            Borough     Neighbourhood\\n Postcode\n0      Not assigned      Not assigned\\n      M1A\n1      Not assigned      Not assigned\\n      M2A\n2        North York         Parkwoods\\n      M3A\n3        North York  Victoria Village\\n      M4A\n4  Downtown Toronto      Harbourfront\\n      M5A"
+                    }, 
+                    "output_type": "execute_result"
+                }
+            ], 
+            "source": "df.head()"
         }
     ], 
     "metadata": {
