set neighborhood to borough where it was not assigned

--- a/Brian's Week 3 hw.ipynb
+++ b/Brian's Week 3 hw.ipynb
@@ -162,17 +162,34 @@
             "source": "#clean up df and keep the old one\ndf_unclean=df\ndf.shape\n#print(df['Neighborhood'].unique())#newlines mixed into the data\n#print(df['Borough'].unique())\n#print(df['PostalCode'].unique())\n#take out the newlines in the data\ndf = df.replace('\\n','', regex=True)\nprint(df['Neighborhood'].unique())\nprint(df['Borough'].unique())\nprint(df['PostalCode'].unique())"
         }, 
         {
-            "execution_count": 15, 
+            "execution_count": 11, 
             "cell_type": "code", 
             "metadata": {}, 
             "outputs": [
                 {
                     "output_type": "stream", 
                     "name": "stdout", 
-                    "text": "(288, 3)\n(211, 3)\n"
+                    "text": "(288, 3)\n(211, 3)\n['North York' 'Downtown Toronto' \"Queen's Park\" 'Etobicoke' 'Scarborough'\n 'East York' 'York' 'East Toronto' 'West Toronto' 'Central Toronto'\n 'Mississauga']\n"
                 }
             ], 
-            "source": "print(df.shape)\ndf=df[df['Borough']!='Not assigned']\nprint(df.shape)\nprint(df['Borough'].uni)\n"
+            "source": "# get rid of rows where the Borough is not assigned\nprint(df.shape)\ndf=df[df['Borough']!='Not assigned']\nprint(df.shape)\nprint(df['Borough'].unique())\n"
+        }, 
+        {
+            "execution_count": 12, 
+            "cell_type": "code", 
+            "metadata": {}, 
+            "outputs": [
+                {
+                    "execution_count": 12, 
+                    "metadata": {}, 
+                    "data": {
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Harbourfront</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Heights</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Queen's Park</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>M9A</td>\n      <td>Etobicoke</td>\n      <td>Islington Avenue</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>M1B</td>\n      <td>Scarborough</td>\n      <td>Rouge</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>M1B</td>\n      <td>Scarborough</td>\n      <td>Malvern</td>\n    </tr>\n  </tbody>\n</table>\n</div>", 
+                        "text/plain": "   PostalCode           Borough      Neighborhood\n2         M3A        North York         Parkwoods\n3         M4A        North York  Victoria Village\n4         M5A  Downtown Toronto      Harbourfront\n5         M5A  Downtown Toronto       Regent Park\n6         M6A        North York  Lawrence Heights\n7         M6A        North York    Lawrence Manor\n8         M7A      Queen's Park      Queen's Park\n10        M9A         Etobicoke  Islington Avenue\n11        M1B       Scarborough             Rouge\n12        M1B       Scarborough           Malvern"
+                    }, 
+                    "output_type": "execute_result"
+                }
+            ], 
+            "source": "#If a neighborhood is not assigned, change it to be the same as the borough\ndf.Neighborhood.value_counts()['Not assigned'] #how many do we have?\ndf.loc[df.Neighborhood == 'Not assigned', 'Neighborhood'] = df['Borough']\ndf[0:10]\n\n"
         }
     ], 
     "metadata": {
